2010-04-24  James Youngman  <jay@gnu.org>

	Further include-what-you-use fixes.
	* delta.cc: Include cleanup.h, and ioerr.h.  Include delta.h earlier.

	Various include-what-you-use fixes.
	* delta-iterator.cc: Don't include cssc.h, sccsfile.h or delta.h,
	since we don't use them.  Do include cssc-assert.h, since we do
	use that.
	* delta-iterator.h: add forward declarations of cssc_delta_table
	and delta.
	* bodyio.cc: Include what you use; include bodyio.h first.
	* bodyio.h: Include <cstdio>.
	* canonify.cc: Don't include cssc.h.  Include sccsname.h first.
	Include file.h.
	* cleanup.h: Move class cleanup into this separate file (out of quit.h).
	* quit.h: Don't declare class cleanup (we moved it).
	* filelock.h: Include cleanup.h.
	* sccsname.h: Include mystring.h and filelock.h.
	* cssc.h: Move declaration of split_filename into file.h.
	* file.h: Declare split_filename.
	* pfile.h: Include ioerr.h.

	Include what you use; include sid_list.h first.
	* unit-tests/test_sid_list.cc: Include only what we use; don't
	include cssc.h or sid.h.

	Include what you use; make it possible to include quit.h first or
	sccsdate.h first.
	* sccsdate.h: Include <cstdio> and mystring.h.
	* quit.h: Include cssc-assert.h (for ASSERT).
	* unit-tests/test_sccsdate.cc: Include sccsdate.h first.

	Include what you use; make it possible to use class relvbr by
	including only relvbr.h.
	* unit-tests/test_relvbr.cc: Include relvbr.h first, don't include
	release.h or sid.h.
	* relvbr.h: Include <cstdio>.

	Include what you use; make it possible to use class release by
	including only release.h and release_list by including only
	rel_list.h.
	* release.h: Include <cstdio>.
	* unit-tests/test_release.cc: Don't include cssc.h.
	* unit-tests/test_rel_list.cc: Likewise for rel_list.h.

	Include what you use; include delta-table.h first in the unit test.
	* unit-tests/test_delta-table.cc: Include delta-table.h first.

	Include what you use; make it possible to use delta by