@@ -3,6 +3,12 @@
 	Further include-what-you-use fixes.
 	* delta.cc: Include cleanup.h, and ioerr.h.  Include delta.h earlier.
 
+	Avoid redundant inclusion of cssc.h, sccsfile.h, delta.h.
+	* dtbl-prepend.cc: Don't include cssc.h or sccsfile.h, since we
+	don't use them.
+	* delta-table.cc: Avoid including cssc.h, sccsfile.h, delta.h
+	since we don't use them.
+
 	Various include-what-you-use fixes.
 	* delta-iterator.cc: Don't include cssc.h, sccsfile.h or delta.h,
 	since we don't use them.  Do include cssc-assert.h, since we do
